[package]
name = "chat_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-files = "0.6.2"
actix-web = "4.2.1"
actix-web-actors = "4.1.0"
actix-cors = "0.6.4"
rand = "0.8.5"
serde = "1.0.147"
serde_json = "1.0.88"
diesel = "2.0.2"
uuid = "1.2.2"